Save personal config.ini Comments in openfisca_survey_manager note pour passer en mensuel

--- a/config.ini
+++ b/config.ini
@@ -1,11 +1,12 @@
-# Fill in the following options. You may copy this file to config_local.ini
 [collections]
-collections_directory = None
-default_collection = None
+collections_directory = /Users/adrienpacifico/openfisca/Data/
+default_collection = /Users/adrienpacifico/openfisca/Data/ofsc
 logement = None
 openfisca = None
+erfs = /Users/adrienpacifico/openfisca/Data/erfs.json
 
 [data]
-input_directory = None
-output_directory = None
-tmp_directory = None
+input_directory = /Users/adrienpacifico/openfisca/Data/
+output_directory = /Users/adrienpacifico/openfisca/Data/ofsc
+tmp_directory = /Users/adrienpacifico/openfisca/Data/ofsc/tmp
+
